--- a/M03_variablesydatos/Prep_Course_Homework_03.ipynb
+++ b/M03_variablesydatos/Prep_Course_Homework_03.ipynb
@@ -18,10 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 8\n",
+    "print(a)"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"float\")"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +69,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"int\")"
+   ]
   },
   {
    "attachments": {},
@@ -66,7 +97,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nombre = \"Ivana Romero\""
+   ]
   },
   {
    "attachments": {},
@@ -418,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
