--- a/M03_variablesydatos/funciones.ipynb
+++ b/M03_variablesydatos/funciones.ipynb
@@ -255,6 +255,24 @@
     "z=str(w)\n",
     "print(type(z))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultado=1<<3 #esta función desplaza 3 espacios a la izquierda al 1 binario\n",
+    "print(resultado)#imprime su valor decimal "
+   ]
   }
  ],
  "metadata": {
