--- a/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
+++ b/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
@@ -18,10 +18,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n es igual a 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=0\n",
+    "if n>0:\n",
+    "    print('n es mayor a 0')\n",
+    "elif n<0:\n",
+    "    print('n es menor a 0')\n",
+    "else:\n",
+    "    print('n es igual a 0')"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +49,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n y l son el mismo tipo de dato\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=8\n",
+    "l=8\n",
+    "if type(n)==type(l):\n",
+    "    print('n y l son el mismo tipo de dato')\n",
+    "else:\n",
+    "    print('n y l no son el mismo tipo de dato')"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +79,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1  es impar\n",
+      "2  es par\n",
+      "3  es impar\n",
+      "4  es par\n",
+      "5  es impar\n",
+      "6  es par\n",
+      "7  es impar\n",
+      "8  es par\n",
+      "9  es impar\n",
+      "10  es par\n",
+      "11  es impar\n",
+      "12  es par\n",
+      "13  es impar\n",
+      "14  es par\n",
+      "15  es impar\n",
+      "16  es par\n",
+      "17  es impar\n",
+      "18  es par\n",
+      "19  es impar\n",
+      "20  es par\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,20):\n",
+    "    i+=1\n",
+    "    if i%2 == 0:\n",
+    "        print(i,' es par')\n",
+    "    else:\n",
+    "        print(i,' es impar')\n"
+   ]
   },
   {
    "attachments": {},
@@ -238,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
