resolviéndo ejercicios del bucle

--- a/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
+++ b/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
@@ -128,10 +128,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0  elevado a 3: 0\n",
+      "1  elevado a 3: 1\n",
+      "2  elevado a 3: 8\n",
+      "3  elevado a 3: 27\n",
+      "4  elevado a 3: 64\n",
+      "5  elevado a 3: 125\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,6):\n",
+    "    pot=i**3\n",
+    "    print(i,' elevado a 3:',pot)\n",
+    "    i+=1"
+   ]
   },
   {
    "attachments": {},
@@ -143,10 +161,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=8\n",
+    "for i in range(0,n):\n",
+    "    i+=1\n",
+    "    print(i)"
+   ]
   },
   {
    "attachments": {},
@@ -158,10 +196,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56\n",
+      "336\n",
+      "1680\n",
+      "6720\n",
+      "20160\n",
+      "40320\n",
+      "40320\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=8\n",
+    "res=num\n",
+    "\n",
+    "while num >0:\n",
+    "    if num>0:\n",
+    "        num-=1\n",
+    "        res=num*res\n",
+    "        print(res)\n",
+    "    else:\n",
+    "        print('num es 0')"
+   ]
   },
   {
    "attachments": {},
@@ -173,10 +237,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,5):\n",
+    "    num=9\n",
+    "    res=num\n",
+    "    i+=1\n",
+    "    while num >0:\n",
+    "        num-=1\n",
+    "        print(num)"
+   ]
   },
   {
    "attachments": {},
@@ -188,10 +312,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "5\n",
+      "6\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=0\n",
+    "while num<11:\n",
+    "    num+=1\n",
+    "    for i in range(3,6):\n",
+    "            i+=1\n",
+    "            print(i)"
+   ]
   },
   {
    "attachments": {},
@@ -203,10 +374,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "tope_rango=30\n",
+    "n = 0\n",
+    "primo = True\n",
+    "while (n < tope_rango):\n",
+    "    for div in range(2, n):\n",
+    "        if (n % div == 0):\n",
+    "            primo = False\n",
+    "    if (primo):\n",
+    "        print(n)\n",
+    "    else:\n",
+    "        primo = True\n",
+    "    n += 1\n"
+   ]
   },
   {
    "attachments": {},
@@ -221,7 +424,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tope_rango=30\n",
+    "n = 0\n",
+    "primo = True\n",
+    "while (n < tope_rango):\n",
+    "    for div in range(2, n):\n",
+    "        \n",
+    "        if (n % div == 0):\n",
+    "            primo = False\n",
+    "    if (primo):\n",
+    "        print(n)\n",
+    "    else:\n",
+    "        primo = True\n",
+    "    n += 1"
+   ]
   },
   {
    "attachments": {},
